# MasterModelizacionMatematica

./: .gitignore  README.md  ejercicios.aux  ejercicios.tex  ejercicios.toc  md190213.R  md210213.R
.ipynb_checkpoints/: Untitled0-checkpoint.ipynb
AsignaturaLogistica/: README.md
AsignaturaLogistica/Parte1/: logistica_p1.ipynb  parte1.tex
AsignaturaLogistica/Parte2/: TRABAJO-2014.doc  Vacaciones.xls
AsignaturaLogistica/Parte3/: parte3.tex
AsignaturaMineriadeDatos/p1/: matrix.csv  md130215.R
AsignaturaProcesamientodelaSenalylaImagen/: README.md
AsignaturaProgramacionCientificaAlgebraComputacional/: README.md
Parte1/: BARBERO-logistica_parte1.oml  Ejercicio 1.docx  logistica_p1.ipynb  parte1.tex
Parte2/: parte2.tex
Parte3/: .~lock.datos_problema_1_Bar.xls#  datos_problema_1_Bar.xls  foo.tex  parte3.ipynb  parte3.out  parte3.tex
algebra/: algebraComputacional-ejerciciosGroebner.ipynb  algebraComputacional-ejerciciosGroebner.tex  ejerciciosAlgebraComputacional-sage.ipynb  ejerciciosAlgebraComputacional.ipynb  testingSymPy.ipynb
p1/: iris-flower  irisSweave-concordance.tex  irisSweave.Rnw  irisSweave.tex  md030310.r  md160209.r
p2/: md130215.R
p3/: md030310.r
p3.2/: genotipos.arff
programacion/: ejercicios.tex  ejerciciosAlgebraComputacional.ipynb  testingNevilleAlgorithm.ipynb
programacion/structpack-1.2/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac  libtool  structpack.F90  structpack.h
programacion/structpack-1.2/doc/: Makefile  Makefile.am  Makefile.in
programacion/structpack-1.2/examples/: Makefile  Makefile.am  Makefile.in  README  create_examples.sh  create_examples.sh.in  dpis_example.F90  dpis_example.c  dt_example.F90  dt_example.c  dts_example.F90  dts_example.c  dtspg_example.F90  dtspg_example.c
programacion/structpack-1.2/mex/: Makefile  Makefile.am  Makefile.in  README  create_mex_files.sh  create_mex_files.sh.in  test.m
programacion/structpack-1.2/src/: Makefile  Makefile.am  Makefile.in
programacion/structpack-1.2/src/conv/: Makefile  Makefile.am  Makefile.in  csp_conv.F90  csp_conv.h  csp_conv.lo  csp_conv.mod  libconv.la  sp_conv.F90  sp_conv.lo  sp_conv.mod
programacion/structpack-1.2/src/dctii/: Makefile  Makefile.am  Makefile.in  libdctii.la  sp_dctii.F90  sp_dctii.lo  sp_dctii.mod
programacion/structpack-1.2/src/dctii/.libs/: libdctii.la
programacion/structpack-1.2/src/diagc/: Makefile  Makefile.am  Makefile.in  libdiagc.la  sp_diagc.F90  sp_diagc.lo  sp_diagc.mod
programacion/structpack-1.2/src/diagc/.libs/: libdiagc.la
programacion/structpack-1.2/src/dpis/: Makefile  Makefile.am  Makefile.in  README  cmdline_dpis.c  cmdline_dpis.ggo  cmdline_dpis.h  csp_dpis.F90  csp_dpis.h  csp_dpis.mod  dpis  dpis.c  dpis.m  libdpis.la  libdpis_la-csp_dpis.lo  libdpis_la-sp_dpis.lo  mex_dpis.c  sp_dpis.F90  sp_dpis.mod  test_dpis.sh
programacion/structpack-1.2/src/dpis/.deps/: cmdline_dpis.Po  dpis.Po
programacion/structpack-1.2/src/dpis/.libs/: libdpis.la
programacion/structpack-1.2/src/dst/: Makefile  Makefile.am  Makefile.in  libdst.la  sp_dst.F90  sp_dst.lo  sp_dst.mod
programacion/structpack-1.2/src/dst/.libs/: libdst.la
programacion/structpack-1.2/src/dt/: Makefile  Makefile.am  Makefile.in  README  cmdline_dt.c  cmdline_dt.ggo  cmdline_dt.h  csp_dt.F90  csp_dt.h  csp_dt.mod  dt  dt.c  dt.m  libdt.la  libdt_la-csp_dt.lo  libdt_la-sp_dt.lo  mex_dt.c  sp_dt.F90  sp_dt.mod  test_dt.sh
programacion/structpack-1.2/src/dt/.deps/: cmdline_dt.Po  dt.Po
programacion/structpack-1.2/src/dt/.libs/: libdt.la
programacion/structpack-1.2/src/dts/: Makefile  Makefile.am  Makefile.in  README  affinity.c  affinity2.c  cmdline_dts.c  cmdline_dts.ggo  cmdline_dts.h  csp_dts.F90  csp_dts.h  csp_dts.mod  dts  dts.c  dts.m  libdts.la  libdts_la-csp_dts.lo  libdts_la-sp_dts.lo  mex_dts.c  sp_dts.F90  sp_dts.mod  test_dts.sh
programacion/structpack-1.2/src/dts/.deps/: affinity.Po  affinity2.Po  cmdline_dts.Po  dts.Po
programacion/structpack-1.2/src/dts/.libs/: libdts.la
programacion/structpack-1.2/src/dtspg/: Makefile  Makefile.am  Makefile.in  README  cmdline_dtspg.c  cmdline_dtspg.ggo  cmdline_dtspg.h  csp_dtspg.F90  csp_dtspg.h  csp_dtspg.mod  dtspg.c  dtspg.m  libdtspg.la  libdtspg_la-csp_dtspg.lo  libdtspg_la-sp_dtspg_.lo  mex_dtspg.c  sp_dtspg.mod  sp_dtspg_.F90  test_dtspg.sh
programacion/structpack-1.2/src/dtspg/.deps/: cmdline_dtspg.Po  dtspg.Po
programacion/structpack-1.2/src/dtspg/.libs/: libdtspg.la
programacion/structpack-1.2/src/rft/: Makefile  Makefile.am  Makefile.in  librft.la  sp_rft.F90  sp_rft.lo  sp_rft.mod
programacion/structpack-1.2/src/rft/.libs/: librft.la
programacion/structpack-1.2/utils/: Makefile  Makefile.am  Makefile.in  csp_toegen.F90  csp_toegen.h  csp_toegen.lo  csp_toegen.mod  ctimer.c  ctimer.lo  cutils.c  cutils.h  cutils.lo  libutils.la  sp_ctimer.F90  sp_ctimer.lo  sp_ctimer.mod  sp_toegen.F90  sp_toegen.lo  sp_toegen.mod  sp_utils.F90  sp_utils.lo  sp_utils.mod
programacion/structpack-1.2/utils/.deps/: ctimer.Plo  cutils.Plo
programacion/structpack-1.2/utils/dfftpack/: Makefile  Makefile.am  Makefile.in  cfftb1.lo  cfftf1.lo  cffti1.lo  cosqb1.lo  cosqf1.lo  dcosqb.lo  dcosqf.lo  dcosqi.lo  dcost.lo  dcosti.lo  dfftb.lo  dfftf.lo  dffti.lo  dsinqb.lo  dsinqf.lo  dsinqi.lo  dsint.lo  dsinti.lo  dzfftb.lo  dzfftf.lo  dzffti.lo  ezfft1.lo  libdfftpack.la  passb.lo  passb2.lo  passb3.lo  passb4.lo  passb5.lo  passf.lo  passf2.lo  passf3.lo  passf4.lo  passf5.lo  radb2.lo  radb3.lo  radb4.lo  radb5.lo  (+13 more)
programacion/structpack-1.2/utils/dfftpack/.libs/: libdfftpack.la
tarea/: .RData  .ejemplo.r.swp  .tarea.Rnw.swp  Anapi-concordance.tex  Anapi.Rnw  bar-concordance.tex  bar.Rnw  bar.tex  ejemplo.r  foo.r  tarea-concordance.tex  tarea.Rnw  tarea.tex
tema2/: foo.ipynb  iouae.txt  operoculta.mat
tema4/: Barbero-Tema4.ipynb  ejer7t4.mat  voztel.mat
tema6/: Barbero-tema6.ipynb  ejer6t6.mat
trabajo/: trabajoMineria.Rnw
trabajo_mineria/: Mineria.Rnw  linksDatos.txt  wpbc.R
(+78 files in other folders)
