## Process this file with automake to produce Makefile.in

examplesdir = $(exec_prefix)/examples

dist_noinst_DATA = create_examples.sh.in

dist_examples_DATA = README \
	dts_example.c \
	dts_example.F90 \
	dpis_example.c \
	dpis_example.F90 \
	dt_example.c \
	dt_example.F90 \
	dtspg_example.c \
	dtspg_example.F90 


examples_SCRIPTS = create_examples.sh
